RESOLVED FIXED224914
[RenderTreeBuilder] Multi-column spanners are not part of the enclosing multi-column renderer's subtree
https://bugs.webkit.org/show_bug.cgi?id=224914
Summary [RenderTreeBuilder] Multi-column spanners are not part of the enclosing multi...
alan
Reported 2021-04-21 20:58:39 PDT
Attachments
Patch (6.50 KB, patch)
2021-04-21 21:15 PDT, alan
no flags
Patch (6.64 KB, patch)
2021-04-22 10:25 PDT, alan
no flags
alan
Comment 1 2021-04-21 21:15:05 PDT
Simon Fraser (smfr)
Comment 2 2021-04-21 21:29:12 PDT
Comment on attachment 426769 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426769&action=review > Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:749 > + // This child is a spanner so it is not in the subtree of the multicolumn renderer (parented directly under the block flow). The parenthetical adds confusion. Write it as a new sentence.
alan
Comment 3 2021-04-22 10:25:04 PDT
EWS
Comment 4 2021-04-22 15:02:23 PDT
Committed r276464 (236924@main): <https://commits.webkit.org/236924@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426826 [details].
Note You need to log in before you can comment on or make changes to this bug.